@@ -1,4 +1,8 @@
-﻿shmuel 23.01.2017 11:29:08 +0200 - build 596
+﻿shmuel 13.02.2017 01:39:25 +0200 - build 597
+
+1. LuaFAR: refactoring.
+
+shmuel 23.01.2017 11:29:08 +0200 - build 596
 
 1. M#3387: Словосочетание "Sort mode" в меню режимов сортировки не переводится на язык интерфейса
 
